--- a/portfolio.html
+++ b/portfolio.html
@@ -8,29 +8,42 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="icon" href="/images/eugene-golovesov-1u8ff0i21ao-unsplash.jpg" type="x/icon">
 </head>
-<body>     
+<body>  
+    <header>
+        <nav>
+            <ul> 
+                <li><a href="#about me">About Me</a></li>
+                <li><a href="#work experience">Work Experiences</a></li>
+                <li><a href="#contact me">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>   
     <main>
+        <hr>
         <article>
-            <h1>Sneak Peak</h1>  
+            <h1>MBUME CHINUAOGU WILFRED</h1>  
+            <P>Front End Web Developer</P>
             <!--semantic elements give more meaning to your documents but are not displayed on the webpage text-->
+            <img src="/images/IMG-20220123-WA0237.jpg" alt="a photo of Mbume Wilfred">
             <section>
-                <h2></h2>
-                <p>My day usually starts <dfn>writing</dfn>  <em>codes</em>  which i can do for hours with love</p>
-                <!--block quote is for quotation-->
-                <blockquote>i try to say my daily morning prayer</blockquote>
+            <h2 id="about me">About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officia repellat doloribus eveniet minus fugiat nam labore aliquam quisquam! Autem cupiditate sapiente cum error pariatur dolor architecto tempora explicabo dolores.</p>
+             </section>
+             <hr>
+            <section>
+                <h2 id="work experience"> Work Experience</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quaerat, pariatur, atque incidunt soluta libero, amet doloribus ipsam labore quas beatae quod delectus fuga dolorum optio corrupti dolor sapiente deserunt!</p>
             </section>
             <hr>
             <section>
-            <h2></h2>
-            <p>My day usually starts <dfn>writing</dfn>  <em>codes</em>  which i can do for hours with love</p>
-            <!--block quote is for quotation-->
-            <blockquote>i try to say my daily morning prayer</blockquote>
+                <h2 id="contact me">Contact Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptas provident quisquam. Accusantium tenetur molestiae rem, vero dolorum tempore nesciunt in ratione, corrupti aut architecto dicta quis perspiciatis hic eius.</p>
             </section>
           </article>
     </main>
+    <hr>
     <footer>
-    
+    <p>Copyright &copy; Mbume Wilfred</p>
     </footer>
-
 </body>
 </html>
