--- a/portfolio.html
+++ b/portfolio.html
@@ -22,17 +22,31 @@
         <hr>
         <article>
             <h1>MBUME CHINUAOGU WILFRED</h1>  
-            <P>Front End Web Developer</P>
+            <P>Aspiring Front End Web Developer</P>
             <!--semantic elements give more meaning to your documents but are not displayed on the webpage text-->
             <img src="/images/IMG-20220123-WA0237.jpg" alt="a photo of Mbume Wilfred">
             <section>
             <h2 id="about me">About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officia repellat doloribus eveniet minus fugiat nam labore aliquam quisquam! Autem cupiditate sapiente cum error pariatur dolor architecto tempora explicabo dolores.</p>
-             </section>
+            <p>I am Currently A student of Medical Physiology at the University of Nigeria Nsukka. I started my coding journey at the end of asuu strike and its been a wonderful experience.</p>
+             <h3>Likes</h3>
+             <ul>
+                <li>Problem Solving</li>
+                <li>Traveling</li>
+                <li>Deep Analytics</li>
+                <li>Surfing the net</li>
+                <li>Nature and outdoors</li>
+             </ul>
+             <h3>Dislikes</h3>
+                <ol>
+                    <li>Hostility</li>
+                    <li>Horror</li>
+                    <li>Boredom</li>
+                </ol>
+        </section>
              <hr>
             <section>
                 <h2 id="work experience"> Work Experience</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quaerat, pariatur, atque incidunt soluta libero, amet doloribus ipsam labore quas beatae quod delectus fuga dolorum optio corrupti dolor sapiente deserunt!</p>
+                <p>Lorem ipsum dolor sit amet , pariatur, atque incidunt soluta libero, amet doloribus ipsam labore quas beatae quod delectus fuga dolorum optio corrupti dolor sapiente deserunt!</p>
             </section>
             <hr>
             <section>
