--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <h1>MBUME CHINUAOGU WILFRED</h1>  
             <P>Aspiring Front End Web Developer</P>
             <!--semantic elements give more meaning to your documents but are not displayed on the webpage text-->
-            <img src="/images/IMG-20220123-WA0237.jpg" alt="a photo of Mbume Wilfred">
+            <img src="IMG-20220123-WA0237.jpg" alt="a photo of Mbume Wilfred">
             <section>
             <h2 id="about me">About Me</h2>
             <p>I am Currently A student of Medical Physiology at the University of Nigeria Nsukka. I started my coding journey at the end of asuu strike and its been a wonderful experience.</p>
